030-argocd/ingressroute.yaml
# argocd/ingressroute.yaml (add to resources if you want it managed here)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.lab`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    # reference your cert-manager-issued secret here
    secretName: argocd-tls
